Create Review Page

--- a/README
+++ b/README
@@ -1,36 +1,1 @@
-Here is the code i tried to use for the form
-
-    <ion-list>
-      <!-- Gampelay -->
-      <ion-item>
-        <ion-label position="floating">Gameplay</ion-label>
-        <ion-range min="1" max="10" step="1" snaps="true" [(ngModel)]="gameplay"></ion-range>
-      </ion-item>
-      <!-- Music -->
-      <ion-item>
-        <ion-label position="floating">Music</ion-label>
-        <ion-range min="1" max="10" step="1" snaps="true" [(ngModel)]="music"></ion-range>
-      </ion-item>
-      <!-- Design -->
-      <ion-item>
-        <ion-label position="floating">Design</ion-label>
-        <ion-range min="1" max="10" step="1" snaps="true" [(ngModel)]="design"></ion-range>
-      </ion-item>
-      <!-- Story -->
-      <ion-item>
-        <ion-label position="floating">Story</ion-label>
-        <ion-range min="1" max="10" step="1" snaps="true" [(ngModel)]="story"></ion-range>
-      </ion-item>
-      <!-- Difficulty -->
-      <ion-item>
-        <ion-label position="floating">Dificulty</ion-label>
-        <ion-range min="1" max="10" step="1" snaps="true" [(ngModel)]="dificulty"></ion-range>
-      </ion-item>
-      <!-- Comments -->
-      <ion-item>
-        <ion-label position="floating">Give us your comment</ion-label>
-        <ion-textarea [(ngModel)]="commentary"></ion-textarea>
-      </ion-item>
-    </ion-list>
-    <!-- add (click)="submitForm()" when API installed -->
-    <ion-button expand="block">Submit</ion-button>
+Fix the background of the lists
