--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Fix the background of the lists
+Website to advertise the Videogame Toy Rampage
+
+Universidad Tecnologica de Chihuahua
+
+Group: IDGSBIS101N
